2010-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-2

	* src/matpow.c (R_matpow): fix modify-argument bug in %^%.
	Thanks to stackflow-user "gd047" for reporting it.

2010-07-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-1, for (first!) release to CRAN

2009-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.96-2

	* tests/exact-ex.R: adapt last test, to also pass on 32-bit Mac OSX

2009-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/exact-ex.R: move print() to see Mac OSX error

2009-03-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sqrtm.R (sqrtm): allow negative eigenvalues, with a
	message iff "verbose"; use sqrt(<complex>) in that case.
	* R/logm.Higham08.R (logm.Higham08): allow negative eigenvalues,
	as in sqrtm.

	* R/expmCond-all.R (.expmCond.1, .expmFrechet2008.26): and others;
	cosmetic (speedy!) improvements; dating of Feb.23.

2009-02-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.96-1, Matrix

	* src/logm-eigen.c (logm_eigen): *do* signal an error, not just
	print; as the help page has always said.

	* man/logm.Rd: comment 'order' and 'trySym' out; introduce
	method = "Higham08" and make it the default (!)
	* R/logm.R: ditto

	* R/logm.Higham08.R: new logm.Higham08() from Michael Stadelmann's thesis.
	* R/sqrtm.R: new sqrtm(), ditto
	* NAMESPACE: add here.
	* tests/log+sqrt.R: tests for these; notably small non-diagonalizable cases

	* R/expm2.R (expm.Higham08): renamed 'expm2' to expm.Higham08

2009-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.95-1
	* R/expmCond-all.R: only public expmCond(*, method=.) function,
		instead of expmCond1Est() etc.
	* man/expmCond.Rd:   ditto
	* tests/expm-Cond.R: ditto

2009-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Maintainer): myself, for the moment; need to get